# cmake-testbench

./: LICENSE  README.md
main_project/: CMakeLists.txt
main_project/cmake/: config.cmake.in  macros.cmake  warning_setup.cmake
main_project/executable/: CMakeLists.txt  main.cpp
main_project/libs/: CMakeLists.txt
main_project/libs/common/: CMakeLists.txt  macros.hpp  mock.cpp  mock.hpp
main_project/libs/lib_a/: CMakeLists.txt  lib_a.cpp  lib_a.hpp
main_project/libs/lib_b/: CMakeLists.txt  lib_b.cpp  lib_b.hpp
sub_project/: CMakeLists.txt  main.cpp
